[test log] Unify pom.xml for tests
Move the mac and not-mac profiles into the global pom.

Also move the coretest.vmargs (empty) and uitest.vmargs (with defaults)
there.

Change-Id: Ia210bad67889cdad9dbf269216a1554af249a9ed
Signed-off-by: Thomas Wolf <thomas.wolf@paranor.ch>