@@ -24,10 +24,6 @@
 
   <name>EGit UI Test Plug-in</name>
 
-  <properties>
-    <uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Xmx1024m -XX:MaxPermSize=384m</uitest.vmparams>
-  </properties>
-
   <profiles>
     <profile>
       <id>skip-ui-tests</id>
@@ -38,30 +34,6 @@
       </activation>
       <properties>
         <maven.test.skip>true</maven.test.skip>
-      </properties>
-    </profile>
-    <profile>
-      <id>macosx</id>
-      <activation>
-        <os>
-          <name>mac os x</name>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <ui.test.vmargs>${uitest.vmparams} -XstartOnFirstThread</ui.test.vmargs>
-      </properties>
-    </profile>
-    <profile>
-      <id>other-os</id>
-      <activation>
-        <os>
-          <name>not-mac</name>
-          <family>!mac</family>
-        </os>
-      </activation>
-      <properties>
-        <ui.test.vmargs>${test.vmparams} ${uitest.vmparams}</ui.test.vmargs>
       </properties>
     </profile>
   </profiles>
